# unshorten.site

./: .gitignore  Cargo.toml  Makefile  README.md  deno.json  flake.nix  variables.mk
.github/workflows/: deploy.yml  push.yml  release.yml
components/: Button.tsx  Footer.tsx  Header.tsx
deploy/: docker-compose.yml
deploy/traefik/: config.toml  services.toml
routes/: _app.tsx  index.tsx
server/: Cargo.toml  Makefile  openapi.yaml  packages.nix
server/src/: main.rs  tracing.rs
server/tests/: docker-compose.yml
server/tests/k6/: main.js
server/tests/static-url-shortner/: main.mjs
src/: main.rs  metrics.rs  unshorten.rs
static/: confetti.min.js
tests/: docker-compose.yml
tests/k6/: main.js
tests/static-url-shortner/: main.mjs  urls.json
website/: Makefile  docker-compose.yml  package-lock.json  package.json  packages.nix
website/src/: index.css  index.html  script.js
